# pcsaft-quaternary

./: README.md  aromas_equilibrios_v3.0.xlsx  pyproject.toml  ternary.py
examples/: 01_2pe_thymol_geraniol_water.py  02_ceaklapp.py  03_2pe_thymol_water_ternary.py  04_suggest_experiments.py  run_all_des.py
examples/data/: ceaklapp_pure.json  thiswork2026_pure.json  water_models.json
src/pcsaft_quaternary/: __init__.py  lle.py  plot.py
