[project]
name = "pcsaft-quaternary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maximilian Fleckenstein", email = "maximilianfv@uc.cl" }
]
requires-python = ">=3.13"
dependencies = [
    "feos==0.9.3",
    "python-ternary>=1.0.8",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
