[project]
name = "pcsaft-quaternary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT AND (BSD-2-Clause OR Apache-2.0)"
authors = [{ name = "Maximilian Fleckenstein", email = "maximilianfv@uc.cl" }]
dependencies = [
  "feos>=0.9.4",
  "python-ternary>=1.0.8",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
